--- a/framework/application/newversion.ui
+++ b/framework/application/newversion.ui
@@ -124,24 +124,6 @@
        <string>&lt;p&gt;Langue in which &lt;b&gt;XINX&lt;/b&gt; must be used.&lt;/p&gt;
 &lt;p&gt;&lt;i&gt;Modification take effect at restart.&lt;/i&gt;&lt;/p&gt;</string>
       </property>
-      <item>
-       <property name="text">
-        <string>(en) English</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../../xinx/application.qrc">
-         <normaloff>:/images/usa.png</normaloff>:/images/usa.png</iconset>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>(fr_FR) French</string>
-       </property>
-       <property name="icon">
-        <iconset resource="../../xinx/application.qrc">
-         <normaloff>:/images/france.png</normaloff>:/images/france.png</iconset>
-       </property>
-      </item>
      </widget>
     </item>
     <item row="1" column="1">
@@ -157,7 +139,7 @@
        <string>Open the last opened project (&lt;i&gt;if any, it's the opened project when &lt;b&gt;XINX&lt;/b&gt; is closed&lt;/i&gt;), when &lt;b&gt;XINX&lt;/b&gt; is started.</string>
       </property>
       <property name="text">
-       <string>&amp;Open the last project at start</string>
+       <string>&amp;Open the last session at start</string>
       </property>
      </widget>
     </item>
@@ -177,8 +159,7 @@
        <enum>Qt::TabFocus</enum>
       </property>
       <property name="whatsThis">
-       <string>&lt;p&gt;This the path where the save dialog must be opened when you create a new project.&lt;/p&gt;
-&lt;p&gt;&lt;i&gt;As the author set the project path to the Application Server path, this path is now the project path. You can safely use another path, but in &lt;i&gt;New Project Wizard&lt;/i&gt;, the Application Server path would be wrong.&lt;/i&gt;&lt;/p&gt;</string>
+       <string>&lt;p&gt;This the path where the save dialog must be opened when you create a new project.&lt;/p&gt;</string>
       </property>
      </widget>
     </item>
@@ -205,10 +186,10 @@
   </widget>
   <widget class="QWizardPage" name="editorPage">
    <property name="title">
-    <string>Edtior Settings Page</string>
+    <string>Editor Settings Page</string>
    </property>
    <property name="subTitle">
-    <string>In this page we adjust settins used by the editor. In this page we can adjust effect, used to facilitate the edition (has show the current line, space, tabulation).</string>
+    <string>In this page we adjust settings used by the editor. In this page we can adjust effect, used to facilitate the edition (has show the current line, space, tabulation).</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -322,7 +303,7 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label_6">
       <property name="text">
-       <string>We have now customize XINX. You can adjsute XINX settings by opening the good &quot;Customize dialog&quot;. In the tools menu.</string>
+       <string>We have now customize XINX. You can adjuste XINX settings by opening the good &quot;Customize dialog&quot;. In the tools menu.</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
