--- a/plugins/core/config/xmlpresconfigform.ui
+++ b/plugins/core/config/xmlpresconfigform.ui
@@ -10,9 +10,6 @@
     <height>192</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Form</string>
-  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout">
@@ -63,11 +60,7 @@
         <item>
          <widget class="QCheckBox" name="m_showSubEltCheckBox">
           <property name="whatsThis">
-           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt;&quot;&gt;If checked, when the text is filtered, the list shows sub-elements of the node whose filter matches the node name.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>If checked, when the text is filtered, the list shows sub-elements of the node whose filter matches the node name.</string>
           </property>
           <property name="text">
            <string>&amp;Show sub-element of the corresponding node</string>
@@ -126,191 +119,6 @@ p, li { white-space: pre-wrap; }
           <property name="whatsThis">
            <string>Color of the node of view type (Generally begins by &lt;i&gt;Vue...&lt;/i&gt;)</string>
           </property>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>White</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Light Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Black</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
          </widget>
         </item>
         <item row="1" column="0">
@@ -328,191 +136,6 @@ p, li { white-space: pre-wrap; }
           <property name="whatsThis">
            <string>Color of a node with a sub-element of name error.</string>
           </property>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>White</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Light Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Black</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
          </widget>
         </item>
         <item row="2" column="0">
@@ -530,191 +153,6 @@ p, li { white-space: pre-wrap; }
           <property name="whatsThis">
            <string>Color of a balise with a &lt;i&gt;screen_data&lt;/i&gt; node.</string>
           </property>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Red</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Green</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Blue</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Cyan</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Magenta</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Yellow</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>White</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Light Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Dark Gray</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Black</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string/>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Custom...</string>
-           </property>
-          </item>
          </widget>
         </item>
        </layout>
