--- a/plugins/generix/projectproperty/wizard/newgenerixderivation2page.ui
+++ b/plugins/generix/projectproperty/wizard/newgenerixderivation2page.ui
@@ -10,9 +10,6 @@
     <height>311</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>WizardPage</string>
-  </property>
   <property name="title">
    <string>Define path that should be read only</string>
   </property>
@@ -60,7 +57,7 @@
     <widget class="QListWidget" name="m_directoryList">
      <item>
       <property name="text">
-       <string>langue/fra/nav</string>
+       <string notr="true">langue/fra/nav</string>
       </property>
       <property name="checkState">
        <enum>Checked</enum>
@@ -68,7 +65,7 @@
      </item>
      <item>
       <property name="text">
-       <string>langue/fra/nav/project</string>
+       <string notr="true">langue/fra/nav/project</string>
       </property>
       <property name="checkState">
        <enum>Unchecked</enum>
