--- a/framework/application/customdialog/ui/customdialog.ui
+++ b/framework/application/customdialog/ui/customdialog.ui
@@ -111,8 +111,8 @@ background-color: rgb(222, 130, 130);</string>
   <tabstop>m_listWidget</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../components/xinxpluginselector.qrc"/>
-  <include location="../../application.qrc"/>
+  <include location="../../../../components/xinxpluginselector.qrc"/>
+  <include location="../../../../xinx/application.qrc"/>
  </resources>
  <connections>
   <connection>
