[TRD] Traduction en français en cours...

--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -104,7 +104,7 @@
         <file>images/ecmascript.png</file>
         <file>rc/exceptionfilter.txt</file>
         <file>images/bullet_arrow.png</file>
-        <file>rc/tipoftheday_fr_FR.txt</file>
+        <file>rc/tipoftheday_fr.txt</file>
         <file>images/banner.png</file>
         <file>rc/tipoftheday_en.txt</file>
         <file>images/newprojectwatermark.png</file>
