[COR] Performance on project list widget

--- a/framework/project/projectdirectorywidget.ui
+++ b/framework/project/projectdirectorywidget.ui
@@ -326,9 +326,15 @@
      <property name="selectionMode">
       <enum>QAbstractItemView::ExtendedSelection</enum>
      </property>
+     <property name="uniformRowHeights">
+      <bool>true</bool>
+     </property>
      <property name="animated">
       <bool>true</bool>
      </property>
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
      <attribute name="headerVisible">
       <bool>false</bool>
      </attribute>
