--- a/framework/application/customdialog/ui/customgeneral.ui
+++ b/framework/application/customdialog/ui/customgeneral.ui
@@ -71,7 +71,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -89,6 +89,13 @@
      <property name="whatsThis">
       <string>&lt;p&gt;In this combobox, you can select the current style to use. If you don't select the style, &lt;b&gt;XINX&lt;/b&gt; will use the style of the desktop, else &lt;b&gt;XINX&lt;/b&gt; will use the style you choose.&lt;/p&gt;
 &lt;p&gt;&lt;i&gt;Modification take effect at restart.&lt;/i&gt;&lt;/p&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QCheckBox" name="m_shortcutDockTitle">
+     <property name="text">
+      <string>Show shortcut near the dock title</string>
      </property>
     </widget>
    </item>
