Add the replacing feature when searching on a directory.

--- a/framework/search/searchdock.ui
+++ b/framework/search/searchdock.ui
@@ -31,6 +31,13 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="_replace_button">
+       <property name="text">
+        <string>&amp;Replace</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
