--- a/plugins/generix/docks/dictionary/addmodifylabeldialog.ui
+++ b/plugins/generix/docks/dictionary/addmodifylabeldialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>AddModifyLabelDialog</class>
  <widget class="QDialog" name="AddModifyLabelDialog">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Adding/Modify dictionary label</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0">
