--- a/framework/snipets/categorypropertydlg.ui
+++ b/framework/snipets/categorypropertydlg.ui
@@ -30,7 +30,7 @@
       <attribute name="title">
        <string>&amp;Description</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout_1">
        <item row="0" column="1">
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
